# memorystorm

./: .gitignore  CMakeLists.txt  README.md  cast_if_required.h  coverage.info
.github/workflows/: tests.yml
memorystorm/: memorystorm.cpp  memorystorm.h  platform_defines.h
tests/: CMakeLists.txt  test_memorystorm.cpp
