cmake_minimum_required(VERSION 3.15)
project(memorystorm VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_library(memorystorm memorystorm/memorystorm.cpp)
target_include_directories(memorystorm PUBLIC memorystorm)
if(WIN32)
  target_link_libraries(memorystorm PRIVATE Psapi)
endif()

option(ENABLE_COVERAGE "Enable code coverage instrumentation" OFF)
if(ENABLE_COVERAGE)
  if(NOT CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang")
    message(WARNING "Coverage is only supported with GCC or Clang")
  else()
    target_compile_options(memorystorm PRIVATE --coverage -O0 -g)
    target_link_options(memorystorm PRIVATE --coverage)
  endif()
endif()

option(BUILD_TESTS "Build tests" ON)
if(BUILD_TESTS)
  enable_testing()
  add_subdirectory(tests)
endif()
